<resources>
    <string name="app_name">하루 10분 스쿼트</string>
    <string name="tfe_pe_request_permission">This app needs camera permission.</string>
    <string name="start">시작</string>
    <string name="zero_time">00:00:00</string>
    <string name="timerTab">오늘 기록</string>
    <string name="recordTab">전체 기록</string>
    <string name="perfect">완벽: </string>
    <string name="bad">불량: </string>
    <string name="perfect_percent">완벽률: </string>

    <!-- record_overall 관련 -->
    <string name="overall">요약</string>
    <string name="history">히스토리</string>
    <string name="totalNum">총 횟수</string>
    <string name="totalTime">누적 시간</string>
    <string name="totalDay">시행 일수</string>
    <string name="perfectPercent">완벽 비율</string>

</resources>
